--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "maseter" ]
+    branches: [ "master" ]
 
 permissions: write-all
 
