--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,12 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       show-sql: true
-      properties:
-        hibernate.format_sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
 
 security:
   jwt:
