--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:budget_management?serverTimezone=Asia/Seoul;MODE=MYSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:budget_management_test?serverTimezone=Asia/Seoul;MODE=MYSQL
     driver-class-name: org.h2.Driver
     username: sa
   jpa:
@@ -13,7 +13,6 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-    generate-ddl: true
 
   h2:
     console:
