fix: 카테고리별 예산 추천 로직 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
 security:
   jwt:
     token:
-      secret-key: c3ByaW5nLWJvb3QtdGVzdC1zZWNyZXQta2V5 #test key
+      secret-key: c3ByaW5nLWJvb3QtdGVzdC1zZWNyZXQta2V5
       access:
-        expire-length: 3600000 #1??
+        expire-length: 3600000
       refresh:
-        expire-length: 1210000000 #14?
+        expire-length: 1210000000
